fix: made text interactable behind invisible sheet

--- a/docs/assets/cheatsheets/cheatsheets.css
+++ b/docs/assets/cheatsheets/cheatsheets.css
@@ -24,6 +24,8 @@ svg.dropdown_box:hover {
 
 div.invisible {
     opacity: 0;
+    height: 0;
+    visibility: hidden;
 }
 
 .cheatsheet {
